Update, fix up spec generator

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  Noto-hinted.zip: c0d29504f8eeedede34eae93b3ac8561cfa5721a
+  Noto-hinted.zip: 7a9828c10a1de39bbce91006a52f74b9a4878981
+  NotoSansCJK.ttc.zip: 13e325d2fac86ecd0be9e796ffc5e2b02e6fc08c
